@@ -1,3 +1,7 @@
+2001-11-14  Per Bothner  <per@bothner.com>
+
+	* GenericProc.java (match):  Look for best match, not first.
+
 2001-11-12  Per Bothner  <per@bothner.com>
 
 	* LitTable.java (writeObject);  Don't assign field for null.
